upgrade to hwi-2.0.0-rc.2, display addresses on usb devices for multisig wallets